Add files from the d3 viz project

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
-<p>This is the index</p>
+    <script type="text/javascript"
+            src="https://d3js.org/d3.v4.min.js"></script>
+    <script type="text/javascript"
+            src={{ url_for('static', filename='viz.js') }}></script>
 {% endblock %}
