--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,9 @@
 {% extends "layout.html" %}
 {% block body %}
-    <h1>{{ bur }}</h1>
-    <script type="text/javascript"
-            src="https://d3js.org/d3.v4.min.js"></script>
-    <script type="text/javascript"
-            src={{ url_for('static', filename='data.js') }}></script>
-    <script type="text/javascript"
-            src={{ url_for('static', filename='viz.js') }}></script>
+    <h1>Choose a file:</h1>
+    <ul>
+    {% for file in files %}
+        <li><a href={{ url_for('sentence_select', filename=file) }}>{{ file }}</a></li>
+    {% endfor %}
+    </ul>
 {% endblock %}
