--- a/templates/sentenceselect.html
+++ b/templates/sentenceselect.html
@@ -1,9 +1,11 @@
-{% extends "layout.html" %}
-{% block body %}
+{% extends "base.html" %}
+{% block page_content %}
     <h1>Choose a sentence:</h1>
-    <ul>
-    {% for sent in sents %}
-        <li><a href={{ url_for('tree_view', filename=filename, sent_id=loop.index0 ) }}>{{ sent }}</a></li>
-    {% endfor %}
+    <ul class="list-group">
+        {% for sent in sents %}
+            <li class="list-group-item">
+                <a href={{ url_for('tree_view', filename=filename, sent_id=loop.index0 ) }}>{{ sent }}</a>
+            </li>
+        {% endfor %}
     </ul>
 {% endblock %}
