--- a/templates/treeview.html
+++ b/templates/treeview.html
@@ -1,9 +1,48 @@
-{% extends "layout.html" %}
-{% block body %}
-    <h1>{{ bur }}</h1>
-    <script type="text/javascript"
-            src="https://d3js.org/d3.v4.min.js"></script>
+{% extends "base.html" %}
+
+{% block content %}
+    {{ super() }}
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">SRL Viz</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <form class="navbar-form navbar-left">
+                    <div class="checkbox navbar-btn">
+                        <input type="checkbox" id="error-sentence-alignment" class="form-control">
+                        <label class="navbar-link" for="error-sentence-alignment">Error in Sentence Alignment</label>
+                    </div>
+                    <div class="checkbox navbar-btn">
+                        <input type="checkbox" id="error-word-alignment" class="form-control">
+                        <label class="navbar-link" for="error-word-alignment">Error in Word Alignment</label>
+                    </div>
+                    <div class="checkbox navbar-btn">
+                        <input type="checkbox" id="poor-translation" class="form-control">
+                        <label class="navbar-link" for="poor-translation">Poor Translation</label>
+                    </div>
+                    <div class="checkbox navbar-btn">
+                        <input type="checkbox" id="poor-frame-parsing" class="form-control">
+                        <label class="navbar-link" for="poor-frame-parsing">Poor Frame Parsing</label>
+                    </div>
+                    <div class="checkbox navbar-btn">
+                        <input type="checkbox" id="poor-syntactic-parsing" class="form-control">
+                        <label class="navbar-link" for="poor-syntactic-parsing">Poor Syntactic Parsing</label>
+                    </div>
+                    <div class="checkbox navbar-btn">
+                        <input type="checkbox" id="all-ok" class="form-control">
+                        <label class="navbar-link" for="all-ok">OK</label>
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    <script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
     <script type="text/javascript">const data = {{ data|tojson|safe }};</script>
-    <script type="text/javascript"
-            src={{ url_for('static', filename='viz.js') }}></script>
+    <script type="text/javascript" src={{ url_for('static', filename='viz.js') }}></script>
 {% endblock %}
