--- a/static/style.css
+++ b/static/style.css
@@ -2,3 +2,11 @@
     font-variant: small-caps;
     fill: #ff0000;
 }
+
+.bad {
+    background-color: lightpink;
+}
+
+.ok {
+    background-color: lightgreen;
+}
