--- a/templates/sentenceselect.html
+++ b/templates/sentenceselect.html
@@ -2,8 +2,8 @@
 {% block page_content %}
     <h1>Choose a sentence:</h1>
     <ul class="list-group">
-        {% for sent in sents %}
-            <li class="list-group-item">
+        {% for sent, annotation in sents %}
+            <li class="list-group-item{% if annotation == 'ok' %} ok{% elif annotation == 'none' %}{% else %} bad{% endif %}">
                 <a href={{ url_for('tree_view', filename=filename, sent_id=loop.index0 ) }}>{{ sent }}</a>
             </li>
         {% endfor %}
