--- a/templates/treeview.html
+++ b/templates/treeview.html
@@ -7,7 +7,7 @@
 
 {% block scripts %}
     {{ super() }}
-    <script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
+    <script type="text/javascript" src={{ url_for('static', filename='d3.v4.min.js') }}></script>
     <script type="text/javascript">const data = {{ data|tojson|safe }};</script>
     <script type="text/javascript" src={{ url_for('static', filename='viz.js') }}></script>
 {% endblock %}
