Add projection logic

--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,11 @@
     fill: #ff0000;
 }
 
+.hebrew-srl-frame {
+    font-variant: small-caps;
+    fill: #ff0000;
+}
+
 .bad {
     background-color: lightpink;
 }
