--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% extends 'bootstrap/base.html' %}
 
-{% block title %}SRL Viz - {{ page }}{% endblock %}
+{% block title %}SRL Viz - {{ title }}{% endblock %}
 
 {% block styles %}
     {{ super() }}
