--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,18 @@
     <h1>There are currently {{ total_annotations }} annotations.</h1>
     <h1>Choose a file:</h1>
     <ul class="list-group">
-    {% for file in files %}
+    {% for file in annotations_by_file %}
         <li class="list-group-item">
             <a href={{ url_for('sentence_select', filename=file) }}>{{ file }} <span class="badge pull-right">{{ annotations_by_file[file] }}</span></a>
         </li>
     {% endfor %}
+    </ul>
+    <ul class="pager">
+        {% if prev_url %}
+        <li class="previous"><a href="{{ prev_url }}">Previous</a></li>
+        {% endif %}
+        {% if next_url %}
+        <li class="next"><a href="{{ next_url }}">Next</a></li>
+        {% endif %}
     </ul>
 {% endblock %}
