--- a/templates/sentenceselect.html
+++ b/templates/sentenceselect.html
@@ -9,4 +9,12 @@
             </li>
         {% endfor %}
     </ul>
+    <ul class="pager">
+        {% if prev_url %}
+        <li class="previous"><a href="{{ prev_url }}">Previous</a></li>
+        {% endif %}
+        {% if next_url %}
+        <li class="next"><a href="{{ next_url }}">Next</a></li>
+        {% endif %}
+    </ul>
 {% endblock %}
