--- a/templates/sentenceselect2.html
+++ b/templates/sentenceselect2.html
@@ -11,4 +11,12 @@
             {% endif %}
         {% endfor %}
     </ul>
+    <ul class="pager">
+        {% if prev_url %}
+        <li class="previous"><a href="{{ prev_url }}">Previous</a></li>
+        {% endif %}
+        {% if next_url %}
+        <li class="next"><a href="{{ next_url }}">Next</a></li>
+        {% endif %}
+    </ul>
 {% endblock %}
